# GSI-ncdiag

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md
ncdiag/: CMakeLists.txt  nc_diag_write_mod.F90  ncdw_metadata.F90
